# routes/directors.js
@@ -1,8 +1,5 @@
-// routes/directors.js
-
 const express = require('express');
 const router = express.Router();
-
 
 const directorController = require('../controllers/directors'); 
 const validation = require('../middleware/validate'); 
