# routes/index.js
@@ -3,14 +3,14 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => { 
- //#swagger.tags=['Hello World'] 
-     res.send('Hello World');
+    //#swagger.tags=['Hello World'] 
+    res.send('Hello World');
 });
 
-// movies
+//  movies
 router.use('/movies', require('./movies'));
 
-//  directors
+// directors
 router.use('/directors', require('./directors'));
 
 module.exports = router;
